--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "axios": "^1.2.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
     "next": "^11.1.4",
