--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "tailwindcss": "^2.2.19",
     "tailwindcss-filters": "^3.0.0",
     "tailwindcss-typography": "^3.1.0",
-    "use-draggable-scroll": "^0.1.0"
+    "use-draggable-scroll": "^0.1.0",
+    "typescript": "^4.6.2",
+    "@types/node": "^14.18.12",
+    "@types/react": "^17.0.40"
   },
   "devDependencies": {
     "@types/node": "^14.18.12",
