--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-draggable": "^4.4.4",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-xarrows": "^2.0.2",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^2.2.19",
     "tailwindcss-filters": "^3.0.0",
     "tailwindcss-typography": "^3.1.0",
