--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=mongodb+srv://cognitiveadmin:CbguXB46BRdhAQEa@cluster0.lqkcf.mongodb.net/cognitive-mapping?retryWrites=true&w=majority
 DATABASE_NAME=cognitive-mapping
-NEXT_PUBLIC_FLASK=http://localhost:5000
+NEXT_PUBLIC_FLASK=https://fuzzymapperserver.herokuapp.com
