--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "mongodb": "^4.13.0",
@@ -21,15 +23,14 @@
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-indiana-drag-scroll": "^2.2.0",
-    "react-xarrows": "^2.0.2",
     "react-scripts": "^5.0.1",
+    "react-xarrows": "^2.0.2",
     "tailwindcss": "^3.2.4",
     "tailwindcss-filters": "^3.0.0",
     "tailwindcss-typography": "^3.1.0",
-    "use-draggable-scroll": "^0.1.0",
     "typescript": "^4.9.4",
-    "@types/node": "^18.11.17",
-    "@types/react": "^18.0.26"
+    "use-draggable-scroll": "^0.1.0",
+    "victory": "^36.6.8"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
