--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
+    "html2canvas": "^1.4.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
     "next": "^13.1.1",
