--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "tailwindcss-typography": "^3.1.0",
     "typescript": "^4.9.4",
     "use-draggable-scroll": "^0.1.0",
-    "victory": "^36.6.8"
+    "utf8-to-ansi": "^1.0.3",
+    "victory": "^36.6.8",
+    "windows-1252": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
