--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.9.4",
     "use-draggable-scroll": "^0.1.0",
     "utf8-to-ansi": "^1.0.3",
+    "uuid": "^9.0.0",
     "victory": "^36.6.8",
     "windows-1252": "^3.0.4"
   },
